# acpica

./: CMakeLists.txt  functions.cpp
source/include/platform/: acenv.h  acpvmos.h
